# eo2

./: .gitattributes  .gitmodules  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: args.rs  config.rs  duration.rs  error.rs  image_widgets.rs  logic.rs  main.rs  read_image.rs  seconds.rs
src/app/: actor.rs  mod.rs  next_path.rs
src/app/image/: mod.rs  read.rs  state.rs
src/app/state/: actor.rs  mod.rs  play.rs
src/read_image/: mod.rs  seconds.rs
src/widgets/: columns.rs  image.rs  image_button.rs  key_value.rs  mod.rs  unit_input.rs
tests/animated/: test.apng
tests/static/: test.dxt5  test.exr  test.ff  test.pam  test.pbm  test.pgm  test.ppm  test.qoi  test.tga  test.tiff
