[package]
edition = "2021"
name = "eo2"
resolver = "2"
version = "0.1.0"

[dependencies]
argh = "0.1"
az = "1"
bytemuck = "1"
clru = { version = "0.6.1" }
crossbeam-channel = "0.5"
directories-next = "2"
eframe = { version = "0.27", features = ["serde"] }
egui = "0.27"
humansize = "2"
image = { version = "0.25", features = ["avif-native"] }
natord = "1"
once_cell = "1"
rand = "0.8"
rustc-hash = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
time = { version = "0.3", features = ["macros", "formatting", "local-offset"] }
toml = "0.8"

[patch.crates-io]
image = { git = "https://github.com/mattfbacon/image", rev = "be3f32e" }

[profile.dev]
opt-level = 1
